Bug 417131 - Animation set to start with-previous is not shown in presentation
Summary: Animation set to start with-previous is not shown in presentation
Status: RESOLVED FIXED
Alias: None
Product: calligrastage
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: T Zachmann
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-02-04 08:34 UTC by Dag Andersen
Modified: 2020-02-05 09:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.1.89
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dag Andersen 2020-02-04 08:34:29 UTC
SUMMARY
It is flashed (probably) once at start of animation, then disappear.


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Dag Andersen 2020-02-05 09:47:49 UTC
Git commit 3537886c176dbc23c8bbc4777efb7ec66d25bdbe by Dag Andersen.
Committed on 05/02/2020 at 09:40.
Pushed by danders into branch 'master'.

Stage: Fix animation of sequential- and parallel animations
FIXED-IN: 3.1.89

M  +6    -0    stage/part/animations/KPrAnimSet.cpp
M  +9    -6    stage/part/animations/KPrAnimationCache.cpp
M  +1    -1    stage/part/animations/KPrAnimationCache.h

https://commits.kde.org/calligra/3537886c176dbc23c8bbc4777efb7ec66d25bdbe