Stage: Fix animation of sequential- and parallel animations

BUG: 417131
FIXED-IN: 3.1.89